Generalized namespaces, added limits and other workers

--- a/hack/config.yaml
+++ b/hack/config.yaml
@@ -1,3 +1,3 @@
-kubeconfig: /var/run/kubernetes/admin.kubeconfig
+kubeconfig: /var/run/kubernetes/tensorflow.corp-ltx1.kubeconfig
 s2i:
   provider: configmap
